Issue #2740: [UX] Align the operations dropbuttons to the left (right for RTL).

--- a/core/modules/layout/css/layout.admin.css
+++ b/core/modules/layout/css/layout.admin.css
@@ -14,9 +14,6 @@
 #layout-list td:last-child {
   min-width: 160px;
 }
-#layout-list th.layout-operations {
-  text-align: center;
-}
 
 @media (min-width: 768px) {
   #layout-list span.priority-low {
